# aoc-2024

day-1/: day1.ipynb
day-10/: day10.ipynb
day-11/: CMakeLists.txt  day11.ipynb  day_11.c  day_11.py
day-12/: CMakeLists.txt  approach.md  main.c
day-13/: Untitled.ipynb
day-2/: day2.ipynb
day-3/: day3.ipynb
day-4/: day4.ipynb
day-5/: explore.ipynb  solution.py
day-6/: day6.ipynb  solution.py
day-7/: day7.ipynb  solution.py
day-8/: day8.ipynb  day8_part1.py  day8_part2.py
day-9/: day9.ipynb  day9_part1.py  day9_part2.py
